Add code for Chapter 3

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,28 @@
-node_modules
-.meteor/local
-.meteor/meteorite
+*.cmi
+*.cmo
+*.cmx
 *.db
 *.exe
-_tracks
+*.img
 *.log
-_build
+*.native
+*.o
+*.xe
+*.xl
+*.xl.in
+*_libvirt.xml
+.meteor/local
+.meteor/meteorite
 .stack-work
+03/3.2/Makefile
+03/3.3/Makefile
+03/3.3/main.ml
+_build
+_tracks
 elm-stuff
 elm.js
+key_gen.ml
+log
+make-fat_block2-image.sh
+mir-*
+node_modules
