--- a/04/4.2/gossamer.cabal
+++ b/04/4.2/gossamer.cabal
@@ -38,6 +38,15 @@ library
                      , these >= 0.7.2 && < 0.8.0
   build-tools:         happy
 
+executable gossamerc
+  default-language:    Haskell2010
+  ghc-options:         -Wall
+  hs-source-dirs:      src
+  main-is:             Main.hs
+  other-modules:       
+  build-depends:       base >= 4.7 && < 5
+                     , gossamer
+
 test-suite spec
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -54,7 +63,7 @@ test-suite spec
                      , containers >= 0.5.7.1 && < 0.5.8.0
                      , gossamer
                      , heredoc >= 0.2.0.0 && < 0.3
-                     , hspec >= 2.2.4 && < 2.3.0
+                     , hspec >= 2.4 && < 2.5
                      , hspec-expectations-pretty-diff >= 0.7.2.4 && < 0.8
                      , monad-gen >= 0.3.0.1 && < 0.3.1.0
                      , mtl == 2.2.1
