--- a/05/Makefile
+++ b/05/Makefile
@@ -1,19 +1,5 @@
 default:
-	@echo available targets:
-	@echo - null_java
-	@echo - null_ruby
-	@echo - mergesort
-	@echo - types.js
-
-null_java:
-	javac NullPointer.java
-	java NullPointer
-
-null_ruby:
-	ruby null_pointer.rb
-
-types.js: types.ts
-	tsc types.ts
+	tsc -p tsconfig.json
 
 mergesort:
 	sml mergesort.sml
